--- a/curso-udemy/secao-9/django-projeto-agenda/templates/base.html
+++ b/curso-udemy/secao-9/django-projeto-agenda/templates/base.html
@@ -24,6 +24,8 @@
                       id="search-input"
                       placeholder="Digite sua pesquisa"
                       name="termo">
+
+              {% include 'parciais/_messages.html' %}
             </div>
           </div>
         </form>
