--- a/curso-udemy/secao-9/django-projeto-agenda/accounts/templates/accounts/login.html
+++ b/curso-udemy/secao-9/django-projeto-agenda/accounts/templates/accounts/login.html
@@ -1,20 +1,26 @@
 {% extends 'base.html' %}
 
+{% block titulo %} Login | {% endblock %}
+
 {% block conteudo %}
 <h1 class="mt-3 mb-3">Login</h1>
+  {% if not user.is_authenticated%}
+    <form method="post" action="{% url 'login' %}">
+        {% include 'parciais/_messages.html' %}
+       {% csrf_token %}
 
-<form method="post" action="{% url 'login' %}">
-    {% include 'parciais/_messages.html' %}
-   {% csrf_token %}
-
-  <div class="form-group">
-    <label>Usuario</label>
-    <input type="text" class="form-control" name="usuario" value="{{ request.POST.usuario }}">
-  </div>
-  <div class="form-group">
-    <label>Senha</label>
-    <input type="password" class="form-control" name="senha">
-  </div>
-  <button type="submit" class="btn btn-primary">Entrar</button>
-</form>
+      <div class="form-group">
+        <label>Usuario</label>
+        <input type="text" class="form-control" name="usuario" value="{{ request.POST.usuario }}">
+      </div>
+      <div class="form-group">
+        <label>Senha</label>
+        <input type="password" class="form-control" name="senha">
+      </div>
+      <button type="submit" class="btn btn-primary">Entrar</button>
+    </form>
+  {% else %}
+    <p>Você fez login com {{ user }}</p>
+    <a href="{% url 'logout' %}">Clique aqui para sair</a>
+  {% endif %}
 {% endblock %}
